styling and disable shift+enter functionality when not using lists to prevent unpredictable behavior

--- a/app/components/canvas/element-types/text-element/index.css
+++ b/app/components/canvas/element-types/text-element/index.css
@@ -58,6 +58,11 @@ ol.content li::before {
   position: relative;
 }
 
+.line > span {
+  width: 100%;
+  display: block;
+}
+
 li.line {
   list-style-type: none;
   margin: 0;
